# IG-Gmail-MCP

./: .gitignore  README.md  build.sh  pyproject.toml  run.sh
.github/workflows/: dev.yml
mcp_server/: __init__.py  auth.py  dynamodb.py  encoders.py  gmail_mcp_actions.py  internal_logger.py  main.py  models.py  open_ai_client.py  pinecone_client.py  reasoning_engine.py  session_store.py  typings.py
