[project]
name = "ig-gmail-mcp"
version = "0.1.0"
description = "Gmail MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awslabs-mcp-lambda-handler>=0.1.6",
    "fastmcp>=2.7.1",
    "google-api-python-client>=2.172.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "mcp[cli]>=1.9.3",
    "openai>=1.93.0",
    "pydantic>=2.11.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "boto3>=1.38.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
